@@ -15,6 +15,7 @@
 10. Make sleep timer options accessible via long press on play/pause buttons.
 11. Always add album sorts.
 12. Add support for text entry fields - for creating new playlist, etc.
+13. Add '+' dialog to queue page allowing to add any URL.
 
 0.2.8
 -----
